--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.5",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
