--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "eslint": "^8",
