--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^5.17.0",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.5",
     "prisma": "^5.17.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -22,6 +23,7 @@
     "router": "^1.3.8"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
