--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.17.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.2.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
-    "prisma": "^5.17.0",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "vercel": "^35.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.7"
   }
 }
